# play_ndk

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hqk/play_ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MyPlayer.cpp  MyPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
app/src/main/java/com/hqk/play_ndk/: Constants.java  MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hqk/play_ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
